# Orinium-browser

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Orinium Browser.sln  README.en.md  README.md  tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
Orinium Browser/: Form1.Designer.cs  Form1.cs  Orinium Browser.csproj  OriniumBrowser_main.cs  Program.cs
Orinium Browser C++/: CMakeLists.txt
Orinium Browser C++/src/: main.cpp
Orinium Browser C++/src/javascript/: orinium_cpp_JSengine.cpp
Orinium Browser C++/src/network/: http_request.cpp  http_request.h
Orinium Browser C++/src/renderer/: html_parser.cpp
Orinium Browser C++/src/ui/: window.cpp  window.h
Orinium Browser Rust/: Cargo.toml
Orinium Browser Rust/src/: main.rs  mani.rs
Orinium Browser Rust/src/javascript/: mod.rs  orinium_rs_JSengine.rs
Orinium Browser Rust/src/network/: http_request.rs
Orinium Browser Rust/src/renderer/: html_bata.rs  html_parser.rs  mod.rs
Orinium Browser Rust/src/ui/: mod.rs  window.rs
Orinium Browser/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
browser-gui/: Cargo.toml
browser-gui/src/: lib.rs
contents/pages/test/: testpage.html
docs/: architecture.md
examples/: test-dom-tree.rs  tests.rs  ui_test.rs
src/: CMakeLists.txt  lib.rs  main.cpp  main.rs
src/browser/: mod.rs
src/components/: mod.rs
src/components/html_dom/: istext.rs  mod.rs
src/components/javascript/: mod.rs
src/components/network/: mod.rs
src/engine/: mod.rs
src/engine/html/: parser.rs  tokenizer.rs
src/engine/renderer/: mod.rs
src/javascript/: mod.rs  orinium_js_engine.cpp
src/network/: http_request.cpp  http_request.h  mod.rs
src/platform/: mod.rs
src/platform/io/: mod.rs
src/platform/network/: cache.rs  config.rs  connection_pool.rs  cookie_store.rs  mod.rs  network_core.rs  sig.rs  tcp.rs  tls.rs
src/platform/network/sig/: mod.rs
src/platform/renderer/: gpu.rs  gpu_state.rs  mod.rs  renderer.rs  shader.wgsl
src/platform/renderer/shaders/: shader.wgsl
src/platform/ui/: mod.rs
src/renderer/: html_parser.cpp  istext.rs  mod.rs
src/ui/: mod.rs  window.cpp  window.h
tests/: dom_parsing_test.rs  tls_connection_test.rs
