[package]
name = "Orinium_Browser"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
pollster = "0.3"
env_logger = "0.10.2"
log = "0.4"
winit = "0.30.12"
wgpu = "26.0.1"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
url = "2.5"
http = "1.1"
futures = "0.3"
rustls = "0.22"
webpki = "0.22"
webpki-roots = "0.26"
rustls-native-certs = "0.7"
x509-parser = "0.16"
sha2 = "0.10"
base64 = "0.21"